--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 </div>
                 <div id="categoryInputs" class="category-inputs">
                     <input type="text" id="category1" placeholder="Enter Campaign Name">
-                    <input type="text" id="category2" placeholder="Enter Campaign Details (optional)">
+                    <input type="text" id="category2" placeholder="Enter Campaign Details (optional)" disabled>
                 </div>
             </div>
             <div id="step4" class="step">
